# c-basics

./: README.md  bubbleSort.c  carFile.c  chars.c  circleCalculator.c  commandLineArgs.c  emoji.c  factorial.c  factorization.c  greatestCommonDivisor.c  hello.c  magicPlant.c  multiplication.c  multithreads.c  pointers  pointers.c  prime-numbers.c  prototypes.c  quicksort.c  scanf-fun  scanf-fun.c  signed-unsigned.c  square.c  stringsort.c  structures.c  subfactorial.c  swap.c  tallyProgram.c  test.txt  testing.c  textconversion.c  upperCase.c  variables.c  writeFile.c
Testing/: logic.c  pointertesting.c  switch.c  xor.c
lib-example/: Makefile.am  configure.ac  myLib.c  myLib.h  myProgram.c  notes.compilation.org
